// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorsCitationView renders  component with no authors 1`] = `
<span
  className="citationAuthors empty"
/>
`;

exports[`AuthorsCitationView renders  component with one author 1`] = `
<span
  className="citationAuthors"
>
  <span
    className="citationAuthor"
  >
    Pedroso, Marcelo Monteiro
     
  </span>
</span>
`;

exports[`AuthorsCitationView renders  component with three authors 1`] = `
<span
  className="citationAuthors"
>
  <span
    className="citationAuthor"
  >
    Pedroso, Marcelo Monteiro
    , 
  </span>
  <span
    className="citationAuthor"
  >
    Smith, J
     and 
  </span>
  <span
    className="citationAuthor"
  >
    Andersen, J
     
  </span>
</span>
`;

exports[`AuthorsCitationView renders  component with two authors 1`] = `
<span
  className="citationAuthors"
>
  <span
    className="citationAuthor"
  >
    Pedroso, Marcelo Monteiro
     and 
  </span>
  <span
    className="citationAuthor"
  >
    Smith, J
     
  </span>
</span>
`;
